# ChaosChimp

./: .gitignore  CMakeLists.txt  ChaosChimp.jucer  README.md
Builds/Linux/: Makefile
Builds/MacOSX/: Info.plist
Builds/MacOSX/ChaosChimp.xcodeproj/: project.pbxproj
Builds/VisualStudio2012/: ChaosChimp.sln  ChaosChimp.vcxproj  ChaosChimp.vcxproj.filters  resources.rc
Graphics/: ChaosChimp.pxm
JuceLibraryCode/: AppConfig.h  JuceHeader.h
Source/: ChaosAudioDropouts.cpp  ChaosAudioDropouts.h  ChaosCpuHog.cpp  ChaosCpuHog.h  ChaosCrasher.cpp  ChaosCrasher.h  ChaosFeedbackSimulator.cpp  ChaosFeedbackSimulator.h  ChaosMemoryLeaker.cpp  ChaosMemoryLeaker.h  ChaosProvider.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RandomChaosExecutor.cpp  RandomChaosExecutor.h
